--- a/i18n/main-en.json
+++ b/i18n/main-en.json
@@ -2,5 +2,6 @@
     "home": "Home",
     "service": "Service",
     "products": "Products",
-    "company": "NullPointer CO., LTD"
+    "company": "NullPointer",
+    "address": "SeaShell·No.8 of HaoJiang Road·HengQin·ZhuHai"
 }
