--- a/i18n/main-en.json
+++ b/i18n/main-en.json
@@ -12,15 +12,24 @@
     },
     "service": {
         "android": "Android",
+        "android_detail": "Focus on Android for 10 years. Rich experince range from APP developing, framework optimizing to firmware customizing.",
         "wechat": "Wechat",
+        "wechat_detail": "Deliver web application solution based on wechat, including public account, mini-program and mini-game.",
         "frontend": "Frontend",
-        "backend": "Backend"
+        "frontend_detail": "React, Angular, Weex, Vue, Node, CSS, HTML5 etc., we are a team fond of frontend skill",
+        "backend": "Backend",
+        "backend_detail": "We are also a team good at data mining, performace improving, auto deploying."
     },
     "product": {
         "xiaoniudushu": "XiaoNiuDuShu",
+        "xiaoniudushu_detail": "Wechat public account for book reading and sharing online",
         "brickout": "Brickout Game",
+        "brickout_detail": "Wechat mini-game for brickout cleaning.",
         "doorguard": "Door Guard",
-        "security": "Security Master"
+        "doorguard_detail": "A Door guard system of residential areas.",
+        "security": "Security Master",
+        "security_detail": "Android app integrated into system to monitor security status of a device."
+
     },
     "contact": "Contact Us"
 }
